Adjusted to latest drivers and jars

--- a/Selenium_Automation/config/config.properties
+++ b/Selenium_Automation/config/config.properties
@@ -5,5 +5,5 @@ chromeOptions=test-type
 
 
 !applicationURL=https://rahulshettyacademy.com/seleniumPractise/#/
-applicationURL=http://192.168.200.140:8080/identityiq80/
-appLoadWaitTime=100
+applicationURL=http://192.168.98.130:8080/identityiq80/
+appLoadWaitTime=PT100S
